--- a/site.html
+++ b/site.html
@@ -15,7 +15,7 @@
 
         <a>SOBRE</a>
         <a>PRODUTO</a>
-        <a>LOJAS</a>
+        <a>LOJAS</a>    
         <a>CONTATO</a>
 
     </div>
@@ -31,9 +31,9 @@
         
         </div>
 
-        <img src="kd novo.avif" alt="">
+        <img src="kd 17.webp" alt="">
 
-    </div>
+
 
     <div>
 
@@ -41,7 +41,33 @@
 
     </div>
 
-    <div><p class="v">pppp</p></div>
+    <div class="uai">
 
+    <div class="v">
+          <img src="" alt="" class="">
+        <samp>* Habilidade</samp> 
+        <p>Um KD alto geralmente indica um alto nível de habilidade no jogo. </p> 
+    </div>
+
+    <div class="v"> 
+        <img src="" alt="">
+        <samp>* Confiança</samp> 
+        <p>Um KD alto pode aumentar sua confiança e autoestima,</p>
+    </div>
+
+    <div class="v"> 
+        <img src="" alt="">
+        <samp>*Respeito</samp> 
+        <p>Outros jogadores podem te respeitar e evitar brigas desnecessárias,sabendo da sua habilidade</p> 
+    </div>
+
+    <div class="v"> 
+        <img src="" alt="">
+        <samp>* Melhores equipes</samp> 
+        <p>Jogadores com KD alto são mais procurados para formar equipes competitivas.</p> 
+    </div>
+
+    </div>
+</div>
 </body>
 </html>
